syntax = "proto3";

package coursepb;

option go_package = "./coursepb";

// Define the Course service
service CourseService {
  // RPC method to get a course by ID
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);

  // RPC method to create a new course
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);

  // RPC method to list all courses
  rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse);
}

// Request and response messages
message GetCourseRequest {
  int32 id = 1;
}

message GetCourseResponse {
  Course course = 1;
}

message CreateCourseRequest {
  string title = 1;
  string description = 2;
  string duration = 3;
  string enrollment_type = 4;
  int32 mentor_id = 5;
}

message CreateCourseResponse {
  Course course = 1;
}

message ListCoursesRequest {}

message ListCoursesResponse {
  repeated Course courses = 1;
}

// Course message
message Course {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string duration = 4;
  string enrollment_type = 5;
  int32 mentor_id = 6;
  string created_at = 7;
  string updated_at = 8;
}
